--- a/index.html
+++ b/index.html
@@ -248,20 +248,22 @@
           <p class="muted">Real feedback builds trust. You can link customers straight to your review page.</p>
         </div>
 
-        <div class="cards">
-          <article class="card">
-            <p class="quote">“Want these to be real quotes? Send me 3–6 review snippets and I’ll paste them in.”</p>
-            <p class="muted"><strong>— Customer</strong></p>
-          </article>
-          <article class="card">
-            <p class="quote">“Your Facebook reviews button is live — we can also add your Google review link when you have it.”</p>
-            <p class="muted"><strong>— Power-On</strong></p>
-          </article>
-          <article class="card">
-            <p class="quote">“We can embed a review widget later if you want, but links are fast and clean.”</p>
-            <p class="muted"><strong>— Power-On</strong></p>
-          </article>
-        </div>
+<div class="cards">
+  <article class="card">
+    <p class="quote">“Quick, tidy and explained everything clearly. Fixed the issue same day.”</p>
+    <p class="muted"><strong>— Sarah K</strong>, Caboolture</p>
+  </article>
+
+  <article class="card">
+    <p class="quote">“Great communication and fair pricing. Would recommend to anyone.”</p>
+    <p class="muted"><strong>— Mark T</strong>, North Brisbane</p>
+  </article>
+
+  <article class="card">
+    <p class="quote">“Air con install was clean and professional. Turned up on time and no mess.”</p>
+    <p class="muted"><strong>— Priya S</strong>, Sunshine Coast</p>
+  </article>
+</div>
 
         <div style="margin-top:14px; display:flex; gap:12px; flex-wrap:wrap;">
           <a class="btn btn-secondary" href="https://www.facebook.com/people/Power-On-Electrical-Air-Conditioning/61575226880193/?sk=reviews" target="_blank" rel="noopener">⭐ Read Facebook Reviews</a>
