--- a/index.html
+++ b/index.html
@@ -251,17 +251,17 @@
 <div class="cards">
   <article class="card">
     <p class="quote">“Quick, tidy and explained everything clearly. Fixed the issue same day.”</p>
-    <p class="muted"><strong>— Sarah K</strong>, Caboolture</p>
+    <p class="muted"><strong>— Sarah K</strong></p>
   </article>
 
   <article class="card">
     <p class="quote">“Great communication and fair pricing. Would recommend to anyone.”</p>
-    <p class="muted"><strong>— Mark T</strong>, North Brisbane</p>
+    <p class="muted"><strong>— Mark T</strong></p>
   </article>
 
   <article class="card">
     <p class="quote">“Air con install was clean and professional. Turned up on time and no mess.”</p>
-    <p class="muted"><strong>— Priya S</strong>, Sunshine Coast</p>
+    <p class="muted"><strong>— Priya S</strong></p>
   </article>
 </div>
 
