--- a/contact.html
+++ b/contact.html
@@ -167,11 +167,11 @@
               placeholder="E.g. Switchboard upgrade + surge protection. Home in Caboolture."></textarea>
           </label>
 
-          <label>
+          <!-- <label>
             Upload photos (optional)
             <input type="file" name="photos" accept="image/*" multiple />
             <span class="tiny muted">Add photos of the issue, switchboard, solar inverter, or air conditioning unit for faster quoting.</span>
-          </label>
+          </label> -->
 
           
           <label class="checkbox">
